--- a/packages/web_ui/src/base.css
+++ b/packages/web_ui/src/base.css
@@ -1,6 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body,
 #root {
-  height: 100%;
-  width: 100%;
+  height: 100dvh;
+  width: 100dvw;
 }
