--- a/packages/web_ui/src/component/App/index.module.less
+++ b/packages/web_ui/src/component/App/index.module.less
@@ -1,18 +1,27 @@
+@right_sidebar_width: 300px;
+
 .app {
   display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100dvh;
-}
 
-.app_left {
-  width: 15%;
-  height: 100dvh;
-  display: flex;
-  flex-direction: column;
-}
+  .app_top {
+    height: 150px;
+  }
 
-.app_right {
-  width: 85%;
-  height: 100dvh;
-  display: block;
+  .app_main {
+    flex-grow: 1;
+    display: flex;
+
+    .app_canvas {
+      display: block;
+      width: calc(100% - @right_sidebar_width);
+    }
+
+    .app_right {
+      width: @right_sidebar_width;
+    }
+  }
+
 }
